--- a/W1D4/index.html
+++ b/W1D4/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="backgound-logo">
-        <img class="logo-top" src="W1D4\assets\logo.png" alt="logo amazon" />
+        <img class="logo-top" src="assets\logo.png" alt="logo amazon" />
       </div>
       <div class="topbar-menu">
         <span>All</span>
@@ -34,18 +34,18 @@
           <span>Shop Now</span>
         </div>
         <div class="img-container-main">
-          <img class="img-rounded" src="W1D4\assets\img_1.jpg" />
-          <img class="img-rounded" src="W1D4\assets\img_2.jpg" />
-          <img class="img-rounded" src="W1D4\assets\img_3.jpg" />
-          <img class="img-rounded" src="W1D4\assets\img_4.jpg" />
+          <img class="img-rounded" src="assets\img_1.jpg" />
+          <img class="img-rounded" src="assets\img_2.jpg" />
+          <img class="img-rounded" src="assets\img_3.jpg" />
+          <img class="img-rounded" src="assets\img_4.jpg" />
         </div>
       </div>
-      <img class="img-big-box" src="W1D4/assets/img_9.png" />
+      <img class="img-big-box" src="assets/img_9.png" />
       <div class="under-title">
         <h3>Find the perfect gift</h3>
         <span>Shop Now</span>
       </div>
-      <img class="img-big-box" src="W1D4/assets/img_10.png" />
+      <img class="img-big-box" src="assets/img_10.png" />
       <div class="under-title">
         <h3>Find the perfect gift</h3>
         <span>Shop Now</span>
@@ -56,7 +56,7 @@
         <a class="linktop" href="#">Back to top</a>
       </div>
       <div class="backgound-logo"></div>
-        <img class="logo-footer" src="W1D4\assets\logo.png" alt="logo amazon" />
+        <img class="logo-footer" src="assets\logo.png" alt="logo amazon" />
       </div>
 
     </footer>
