--- a/W1D4/index.html
+++ b/W1D4/index.html
@@ -21,6 +21,7 @@
       </div>
     </header>
     <main>
+      <div class="centratura">
       <div class="background-orange">Shop All Holiday Gift Cards</div>
       <div class="box-img-top">
         <div id="background-img-top">
@@ -40,6 +41,7 @@
           <img class="img-rounded" src="assets\img_4.jpg" />
         </div>
       </div>
+    </div>
       <img class="img-big-box" src="assets/img_9.png" />
       <div class="under-title">
         <h3>Find the perfect gift</h3>
