--- a/W2D1/index.html
+++ b/W2D1/index.html
@@ -32,7 +32,7 @@
         <a
           class="puntini"
           href="https://in.pinterest.com/pin/18436679718570043/"
-          >https://in.pinterest.com/pin/18436679718570043/</a
+          >Alastor Wallpaper</a
         >
       </div>
     </div>
